--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
       url: https://github.com/obiwanzenobi/gradient-borders
       ref: master
   audioplayers: ^1.0.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
